# png2wasm4src

./: .drone.yml  Cargo.toml  Readme.md
examples/: generate.rs  main.rs
src/: error.rs  flags.rs  lib.rs  lookup.rs  rust.rs  sanitization.rs  sprite.rs
tests/: car.aseprite  four-colors.aseprite  generation.rs  one-color.aseprite  test.rs  three-colors.aseprite  two-colors.aseprite
